chunk分区的内存创建，实现基于jemalloc4算法实现normal分区的内存分配 normal分区 29k-16M 待做：16Mb可弹性伸缩、缓存池设计、smallAllocate分区分配(16b-28k)

--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>buffer.manage</groupId>
     <artifactId>buffer-manage</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>buffer-pool</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.9.0</version> <!-- 或您希望使用的最新版本 -->
+        </dependency>
+    </dependencies>
 
 </project>
