缓存池设计内存回收 待做：16Mb可弹性伸缩、smallAllocate分区分配(16b-28k)

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>mockito-core</artifactId>
             <version>4.9.0</version> <!-- 或您希望使用的最新版本 -->
         </dependency>
+        <dependency>
+            <artifactId>jctools-core</artifactId>
+            <groupId>org.jctools</groupId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
