--- a/net-work/pom.xml
+++ b/net-work/pom.xml
@@ -9,15 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>buffer-pool</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>net-work</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
