--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>buffer.manage</groupId>
-    <artifactId>buffer-manage</artifactId>
+    <groupId>net.manage</groupId>
+    <artifactId>net-manage</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>buffer-pool</module>
+        <module>net-work</module>
     </modules>
 
     <properties>
