--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     <modules>
         <module>buffer-pool</module>
         <module>net-work</module>
+        <module>rpc-example</module>
+        <module>common</module>
+        <module>rpc-proxy</module>
     </modules>
 
     <properties>
@@ -24,6 +27,45 @@
             <artifactId>mockito-core</artifactId>
             <version>4.9.0</version> <!-- 或您希望使用的最新版本 -->
         </dependency>
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.62</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.6.12-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.6.12-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.6.12-SNAPSHOT</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.29.2-GA</version>
+        </dependency>
+
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.6.12-SNAPSHOT</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
