--- a/net-work/pom.xml
+++ b/net-work/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>net.manage</groupId>
-        <artifactId>net-manage</artifactId>
+        <groupId>high.net</groupId>
+        <artifactId>high-net</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.manage</groupId>
+            <groupId>high.net</groupId>
             <artifactId>buffer-pool</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -34,13 +34,13 @@
             <version>4.0.62</version>
         </dependency>
         <dependency>
-            <groupId>net.manage</groupId>
+            <groupId>high.net</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.manage</groupId>
+            <groupId>high.net</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
