--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.manage</groupId>
-    <artifactId>net-manage</artifactId>
+    <groupId>high.net</groupId>
+    <artifactId>high-net</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>common</module>
         <module>buffer-pool</module>
         <module>net-work</module>
-        <module>rpc-example</module>
-        <module>common</module>
         <module>rpc-proxy</module>
+        <module>rpc-example</module>
     </modules>
 
     <properties>
