--- a/rpc-example/pom.xml
+++ b/rpc-example/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>net-manage</artifactId>
-        <groupId>net.manage</groupId>
+        <artifactId>high-net</artifactId>
+        <groupId>high.net</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.manage</groupId>
+            <groupId>high.net</groupId>
             <artifactId>net-work</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -43,13 +43,7 @@
         </dependency>
 
         <dependency>
-            <groupId>net.manage</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.manage</groupId>
+            <groupId>high.net</groupId>
             <artifactId>rpc-proxy</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
