--- a/rpc-example/pom.xml
+++ b/rpc-example/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>2.6.12-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>2.6.12-SNAPSHOT</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
         <dependency>
